# libsnow

./: CMakeLists.txt  README.md  snow_config.h.in
cmake/: config.cmake  macros.cmake
examples/: CMakeLists.txt  main.c
include/snow/: snow.h
src/: CMakeLists.txt  glad.c  main.c  snow.c  snow_internal.h  snow_main.c  stb_image.h
src/glad/: glad.h
src/window/win32/: window.c  window.h
